--- a/Project_02/CMakeLists.txt
+++ b/Project_02/CMakeLists.txt
@@ -8,4 +8,6 @@ add_executable(exe02)
 
 target_sources(exe02 PRIVATE main_02.cpp)
 
-target_compile_features(exe02 PRIVATE cxx_lambda_init_captures) # without this feature => error: expected expression
+target_compile_features(exe02 PRIVATE cxx_std_14)
+
+# target_compile_features(exe02 PRIVATE cxx_lambda_init_captures) # without this feature => error: expected expression
