--- a/Project_03/app/CMakeLists.txt
+++ b/Project_03/app/CMakeLists.txt
@@ -8,14 +8,10 @@ project( Application
 
 add_executable(exe03)
 target_sources(exe03 PRIVATE main_03.cpp)
-target_link_libraries(exe03
-    PRIVATE customer)
-
+target_link_libraries(exe03 PRIVATE customer) # uses shared lib # libcustomer.dylib
 target_compile_features(exe03 PRIVATE cxx_std_14)
 
 add_executable(exe03_static)
 target_sources(exe03_static PRIVATE main_03.cpp)
-target_link_libraries(exe03_static
-    PRIVATE customer_static)    
-
+target_link_libraries(exe03_static PRIVATE customer_static) # uses static lib  # libcustomer_static.a
 target_compile_features(exe03_static PRIVATE cxx_std_14)
